fixed layout issues, chaged classnames to fit in BEM

--- a/src/Components/Topbar/Topbar.css
+++ b/src/Components/Topbar/Topbar.css
@@ -1,4 +1,4 @@
-.Topbar {
+.topbar {
     width: 100%;
     height: 67px;
     background-color: #C3CFD9;
