--- a/src/Pages/Success/Success.css
+++ b/src/Pages/Success/Success.css
@@ -1,4 +1,4 @@
-.Success {
+.success {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -6,7 +6,7 @@
     padding: 85px 0px 0px 0px;
 }
 
-.Success > p {
+.success > p {
     font-weight: bold;
     font-size: 24px;
     line-height: 28px;
@@ -14,32 +14,32 @@
     text-align: center;
 }
 
-.Success .info-holder {
+.success .info-holder {
     width: 90%;
     margin-top: 60px;
 }
 
-.Success .info-holder > div {
+.success .info-holder > div {
     margin-bottom: 40px;
 }
 
-.Success .info-holder .buyer {
+.success .info-holder .buyer {
     margin-bottom: 20px;
 }
 
-.Success .info-holder span {
+.success .info-holder span {
     display: block;
     font-weight: bold;
     font-size: 24px;
     margin-bottom: 12px;
 }
 
-.Success .info-holder p {
+.success .info-holder p {
     font-size: 20px;
     margin-bottom: 7px;
 }
 
-.Success .home {
+.success .home {
     width: 100%;
     height: 42px;
     background-color: #E8833A;
